--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,25 +2,28 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Run Jekyll Server",
+      "label": "Serve Jekyll",
       "type": "shell",
-      "command": "./tools/run.sh",
-      "group": {
-        "kind": "build",
-        "isDefault": true
+      "command": "jekyll serve --livereload --host 127.0.0.1 --port 4000",
+      "isBackground": true,
+      "problemMatcher": {
+        "owner": "jekyll",
+        "fileLocation": "absolute",
+        "pattern": [
+          {
+            "regexp": ".",
+            "file": 1,
+            "location": 2,
+            "message": 0
+          }
+        ],
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": ".*Regenerating:.*",
+          "endsPattern": ".*Server address: http://127.0.0.1:4000.*"
+        }
       },
-      "problemMatcher": [],
-      "detail": "Runs the Jekyll server with live reload."
-    },
-    {
-      "label": "Build Jekyll Site",
-      "type": "shell",
-      "command": "./tools/test.sh",
-      "group": {
-        "kind": "build"
-      },
-      "problemMatcher": [],
-      "detail": "Build the Jekyll site for production."
+      "runOptions": { "runOn": "folderOpen" }
     }
   ]
 }
